linked css style sheets for header and footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* React styling below */
 .App {
   text-align: center;
 }
@@ -34,5 +35,47 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+
+
+
+
+
+/* Application CSS below */
+
+/* Footer */
+.footer {
+  display: flex;
+  font-size: 30px;
+}
+
+/* Header */
+.header {
+  @include white-text-black-bg;
+  display: flex;
+  justify-content: space-between;
+
+
+  a {
+    @include white-text-black-bg;
+    div {
+      margin: 10px;
+      font-size: large;
+    }
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    li {
+      margin-right: 1.2rem;
+      cursor: pointer;
+      font-weight: 700;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
