--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,27 @@
   display: flex;
   justify-content: space-between;
   font-size: 30px;
+  height: 150px;
+  background-color: #F7F7F7;
 }
 
+#logo {
+  height: 150px;
+  width: 230px;
+}
 
 /* Footer */
 .footer {
   display: flex;
   justify-content: space-between;
-  background-color: green;
-  border-top:2px solid red;
+  background-color: #F7F7F7;
   position: fixed;
   width: 100%;
   bottom: 0;
-  color: white;
+  color: black;
   font-size: 14px;
  }
+
 
 h2 {
   font-size: 16px;
