--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,39 @@
+.grid-container{
+  display: inline-grid;
+  gap: 50px;
+  width: 300px;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200px;
+  width: 200px;
+}
+
+img {
+  height: 150px;
+  width: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
