--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   display: inline-grid;
   gap: 50px;
   width: 300px;
+
 }
 
 .projects {
@@ -10,6 +11,9 @@
   justify-content: space-between;
   height: 200px;
   width: 200px;
+  font-size: 12px;
+  text-align: center;
+  padding: 50px;
 }
 
 img {
@@ -17,11 +21,35 @@ img {
   width: 200px;
 }
 
+.name {
+  font-size: 22px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  text-decoration: underline;
+}
 
 
+/* Description pop-up */
+.project-description {
+  position: relative;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  padding: 10px;
+  display: none;
+  z-index: 1;
+}
 
-
-
+.projects:hover .project-description {
+  display: block; 
+}
 
 
 
@@ -35,7 +63,8 @@ img {
 
 
 body {
-  margin: 0;
+  margin-bottom: 100px;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
