--- a/src/Show.css
+++ b/src/Show.css
@@ -37,16 +37,40 @@ h1 {
     padding-bottom: 8px;
 }
 
-.avatar-image {
-    position: relative;
-    margin-left: 16%;
-    height: 70%;
-    width: 70%;
-}
+
 
 
 /* Card7 css technology used for project */
 .card7 {
-    margin-left: 6px;
+    margin-left: 2px;
+    margin-top: 12%;
     width: 20%;
+    font-size: 14px;
+    margin-right: 4px;
+    align-items: center;
+}
+
+/* Card1 css description used for project */
+.card1 {
+    margin-left: 4px;
+    margin-top: 12%;
+    width: 20%;
+    font-size: 14px;
+    margin-right: 2px;
+}
+
+
+
+/* Card2 css title and image used for project */
+.card2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+.avatar-image {
+    position: relative;
+    height: 70%;
+    width: 70%;
 }
