--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,3 +1,118 @@
 .h2 {
     font-size: 14px;
 }
+
+.grid-container{
+    display: inline-grid;
+    gap: 50px;
+    width: 300px;
+  }
+  
+  .cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding: 50px;
+  }
+  
+  .cards:hover {
+    color: black;
+    text-decoration: underline;
+  }
+  
+  
+  /* Description pop-up */
+  .-description {
+    position: relative;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+    padding: 10px;
+    display: none;
+    z-index: 1;
+  }
+  
+  .projects:hover .project-description {
+    display: block; 
+  }
+
+  /* Project name */
+h1 {
+    font-size: 48px;
+}
+
+
+/* Buttons */
+.deletebtn {
+    text-align: center;
+    height: 100px;
+}
+
+.editbtn {
+    align-items: center;
+    height: 100px;
+}
+
+.toprow {
+    display: flex;
+}
+
+.links {
+    display: flex;
+    font-size: 12px;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 10px;
+}
+
+/* Card2 css name and logo picture */
+.card2 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: 20%;
+    width: 60%;
+    padding-bottom: 8px;
+}
+
+
+
+
+/* Card7 css technology used for project */
+.card7 {
+    margin-left: 2px;
+    margin-top: 12%;
+    width: 20%;
+    font-size: 14px;
+    margin-right: 4px;
+    align-items: center;
+}
+
+/* Card1 css description used for project */
+.card1 {
+    margin-left: 4px;
+    margin-top: 12%;
+    width: 20%;
+    font-size: 14px;
+    margin-right: 2px;
+}
+
+
+
+/* Card2 css title and image used for project */
+.card2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+}
+
+.avatar-image {
+    position: relative;
+    height: 70%;
+    width: 70%;
+}
