--- a/src/Resume.css
+++ b/src/Resume.css
@@ -8,7 +8,7 @@
     width: 300px;
   }
   
-  .cards {
+  .card1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,102 +17,58 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
+    background-color: aquamarine;
   }
   
-  .cards:hover {
+  .card1:hover:hover {
     color: black;
     text-decoration: underline;
   }
   
-  
-  /* Description pop-up */
-  .-description {
-    position: relative;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
-    padding: 10px;
-    display: none;
-    z-index: 1;
-  }
-  
-  .projects:hover .project-description {
-    display: block; 
-  }
-
-  /* Project name */
-h1 {
-    font-size: 48px;
-}
-
-
-/* Buttons */
-.deletebtn {
-    text-align: center;
-    height: 100px;
-}
-
-.editbtn {
-    align-items: center;
-    height: 100px;
-}
-
-.toprow {
+  .card2 {
     display: flex;
-}
-
-.links {
-    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
     font-size: 12px;
-    justify-content: center;
-    gap: 50px;
-    margin-top: 10px;
-}
+    text-align: center;
+    padding: 50px;
+    background-color: aquamarine;
+  }
 
-/* Card2 css name and logo picture */
-.card2 {
+  .card3 {
     display: flex;
     flex-direction: column;
-    position: relative;
-    margin-left: 20%;
-    width: 60%;
-    padding-bottom: 8px;
-}
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding: 50px;
+    background-color: aquamarine;
+  }
 
-
-
-
-/* Card7 css technology used for project */
-.card7 {
-    margin-left: 2px;
-    margin-top: 12%;
-    width: 20%;
-    font-size: 14px;
-    margin-right: 4px;
-    align-items: center;
-}
-
-/* Card1 css description used for project */
-.card1 {
-    margin-left: 4px;
-    margin-top: 12%;
-    width: 20%;
-    font-size: 14px;
-    margin-right: 2px;
-}
-
-
-
-/* Card2 css title and image used for project */
-.card2 {
+  .card4 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 0;
-}
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding: 50px;
+    background-color: aquamarine;
+  }
 
-.avatar-image {
-    position: relative;
-    height: 70%;
-    width: 70%;
-}
+  .card5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding: 50px;
+    background-color: aquamarine;
+  }
