--- a/src/Resume.css
+++ b/src/Resume.css
@@ -28,7 +28,7 @@
   
   .card2 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: space-between;
     height: 200px;
     width: 200px;
@@ -36,6 +36,7 @@
     text-align: center;
     padding: 50px;
     background-color: aquamarine;
+    border-radius: 50%;
   }
 
   .card3 {
@@ -53,7 +54,7 @@
 
   .card4 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: space-between;
     height: 200px;
     width: 200px;
