resume page css

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -17,7 +17,7 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
-    background-color: aquamarine;
+    background-color: #fcefc9;
     border-radius: 50%;
   }
   
@@ -35,7 +35,7 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
-    background-color: aquamarine;
+    background-color: #fcefc9;
     border-radius: 50%;
   }
 
@@ -48,7 +48,7 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
-    background-color: aquamarine;
+    background-color: #fcefc9;
     border-radius: 50%;
   }
 
@@ -61,7 +61,7 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
-    background-color: aquamarine;
+    background-color: #fcefc9;
     border-radius: 50%;
   }
 
@@ -74,7 +74,7 @@
     font-size: 12px;
     text-align: center;
     padding: 50px;
-    background-color: aquamarine;
+    background-color: #fcefc9;
     border-radius: 50%;
   }
 
