--- a/src/Resume.css
+++ b/src/Resume.css
@@ -8,7 +8,7 @@
     width: 300px;
   }
   
-  .card1 {
+  .job1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -21,12 +21,12 @@
     border-radius: 50%;
   }
   
-  .card1:hover:hover {
+  .job1:hover:hover {
     color: black;
     text-decoration: underline;
   }
   
-  .card2 {
+  .job2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -39,7 +39,7 @@
     border-radius: 50%;
   }
 
-  .card3 {
+  .job3 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -52,7 +52,7 @@
     border-radius: 50%;
   }
 
-  .card4 {
+  .job4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -65,7 +65,7 @@
     border-radius: 50%;
   }
 
-  .card5 {
+  .job5 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
