--- a/src/Resume.css
+++ b/src/Resume.css
@@ -78,6 +78,20 @@
     margin-bottom: 20px;
   }
 
+  .job6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    width: 200px;
+    font-size: 12px;
+    text-align: center;
+    padding: 50px;
+    background-color: #fcefc9;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+
 
 
   .secondrow {
@@ -86,6 +100,11 @@
   }
 
   .fourthrow {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .sixthrow {
     display: flex;
     flex-direction: row-reverse;
   }
@@ -109,6 +128,10 @@
   }
 
   .job5text {
+    word-wrap: break-word; 
+  }
+
+  .job6text {
     word-wrap: break-word; 
   }
 
