--- a/src/Resume.css
+++ b/src/Resume.css
@@ -21,7 +21,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
-    margin-top: 40px;
+    margin: 20px 20px 20px 20px;
   }
   
   
@@ -36,6 +36,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
+    margin: 20px 20px 20px 20px;
   }
 
   .job3 {
@@ -62,6 +63,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
+    margin: 20px 20px 20px 20px;
   }
 
   .job5 {
@@ -75,7 +77,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
-    margin-bottom: 20px;
+    margin: 20px 20px 20px 20px;
   }
 
   .job6 {
@@ -89,7 +91,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
-    margin-bottom: 20px;
+    margin: 20px 20px 20px 20px;
   }
 
 
