--- a/src/Resume.css
+++ b/src/Resume.css
@@ -8,7 +8,7 @@
     width: 300px;
   }
 
-
+/* Circles */
 
   .job1 {
     display: flex;
@@ -94,7 +94,7 @@
     margin: 20px 20px 20px 20px;
   }
 
-
+/* Circle placement on screen  */
 
   .secondrow {
     display: flex;
@@ -111,7 +111,7 @@
     flex-direction: row-reverse;
   }
 
-
+/* Text */
 
   .job1text {
     word-wrap: break-word; 
@@ -138,10 +138,9 @@
   }
 
 
-
+/* Effects */
 
 
   .job1:hover:hover {
-    color: black;
-    text-decoration: underline;
+    transform: scale(1.1);
   }
