--- a/src/Resume.css
+++ b/src/Resume.css
@@ -152,6 +152,7 @@
     margin-left: 30%;
     align-items: center;
     margin-top: 10%;
+    margin-right: 30%;
   }
 
   .job3:hover:hover {
@@ -166,6 +167,7 @@
     margin-left: 30%;
     align-items: center;
     margin-top: 10%;
+    margin-right: 30%;
   }
 
   .job5:hover:hover {
@@ -181,6 +183,7 @@
     align-items: center;
     margin-top: 10%;
     margin-bottom: 10%;
+    margin-right: 30%;
   }
   
   
