update to header

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,10 @@
 .portfoliolink {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .resumelink {
-    font-size: 20px;
-    margin-left: 4%;
+    font-size: 18px;
+    margin-right: 4%;
 }
 
 .header {
