dark mode toggle to header

--- a/src/Header.css
+++ b/src/Header.css
@@ -12,3 +12,13 @@
     align-items: center;
     margin-top: 10px;
 }
+
+.light-mode {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+.dark-mode {
+    background-color: #000000;
+    color: #ffffff;
+  }
