dark mode toggle to header

--- a/src/App.css
+++ b/src/App.css
@@ -108,5 +108,13 @@ p {
 }
 
 
+/* Dark Mode */
+.light-mode {
+  background-color: #ffffff;
+  color: #000000;
+}
 
-
+.dark-mode {
+  background-color: #000000;
+  color: #ffffff;
+}
