--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,14 @@ p {
   padding-left: 20px;
 }
 
-
+.link-text {
+  display: none; /* Hide the text initially */
+}
 
 /* Media query for small screens */
 @media screen and (max-width: 768px) {
   .link-text {
-    display: none;
+    display: block;
     text-align: center;
     padding-right: 20px;
     padding-left: 20px;
