--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 /* Footer */
 .footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #F7F7F7;
   position: fixed;
   width: 100%;
@@ -28,19 +28,15 @@
  }
 
  .githublogo {
-  height: 23px;
-  width: 23px;
+  height: 26px;
+  width: 26px;
  }
 
  .linkedinlogo {
-  height: 23px;
-  width: 23px;
+  height: 26px;
+  width: 26px;
  }
 
- .emailicon {
-  height: 23px;
-  width: 23px;
- }
 
 h2 {
   font-size: 16px;
@@ -65,6 +61,17 @@ p {
     padding-left: 20px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
