--- a/src/Resume.css
+++ b/src/Resume.css
@@ -22,6 +22,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
   
   
@@ -37,6 +38,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job3 {
@@ -50,6 +52,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job4 {
@@ -64,6 +67,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job5 {
@@ -78,6 +82,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job6 {
@@ -92,6 +97,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
 /* Circle placement on screen  */
