--- a/src/Resume.css
+++ b/src/Resume.css
@@ -146,7 +146,19 @@
 
 /* Effects */
 
-  .job1:hover:hover {
+.job6.active {
+  transform: scale(1.4);
+  margin-left: 30%;
+  align-items: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  margin-right: 30%;
+}
+
+
+
+
+  /* .job1:hover:hover {
     transform: scale(1.4);
     margin-left: 30%;
     align-items: center;
@@ -190,7 +202,7 @@
     margin-top: 10%;
     margin-bottom: 10%;
     margin-right: 30%;
-  }
+  } */
   
   
   
