--- a/src/Landing.css
+++ b/src/Landing.css
@@ -20,6 +20,10 @@
     font-size: 40px;
 }
 
+.welcomemessage {
+    font-size: 40px;
+}
+
 /* Media queries for smaller screens */
 @media screen and (max-width: 768px) {
     .pic {
@@ -37,7 +41,7 @@
         margin-top: 2%;
     }
 
-    .h1 {
-        font-size: 20px;
+    .welcomemessage {
+        font-size: 22px;
     }
 }
