--- a/src/Resume.css
+++ b/src/Resume.css
@@ -23,6 +23,7 @@
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
   
   
@@ -39,6 +40,7 @@
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
 
   .job3 {
@@ -53,6 +55,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
 
   .job4 {
@@ -68,6 +71,7 @@
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
 
   .job5 {
@@ -83,6 +87,7 @@
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
 
   .job6 {
@@ -98,6 +103,7 @@
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
     transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
+    pointer-events: fill;
   }
 
 /* Circle placement on screen  */
@@ -141,7 +147,6 @@
 
   .job6text {
     word-wrap: break-word;
-    pointer-events: none;
   }
 
 
