--- a/src/Resume.css
+++ b/src/Resume.css
@@ -22,7 +22,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
   
   
@@ -38,7 +38,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job3 {
@@ -52,7 +52,7 @@
     padding: 50px;
     background-color: #fcefc9;
     border-radius: 50%;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job4 {
@@ -67,7 +67,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job5 {
@@ -82,7 +82,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
   .job6 {
@@ -97,7 +97,7 @@
     background-color: #fcefc9;
     border-radius: 50%;
     margin: 20px 20px 20px 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
   }
 
 /* Circle placement on screen  */
@@ -194,8 +194,13 @@
 }
 
 
-/* on hover effects */
 
+
+
+
+
+
+/* 
 .job1:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
@@ -224,7 +229,7 @@
 .job6:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
-}
+} */
   
   
   
