responsive css changes to resume page

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -158,8 +158,8 @@
   transform: scale(1.4);
   /* margin-left: 30%; */
   align-items: center;
-  /* margin-top: 10%;
-  margin-right: 30%; */
+  margin-top: 10%;
+  margin-right: 30%;
 }
 
 .job3.active {
