--- a/src/Resume.css
+++ b/src/Resume.css
@@ -195,28 +195,23 @@
 
 
 
-/* Media queries for smaller screens */
-/* @media screen and (max-width: 768px) {
-  .portfoliolink {
-      font-size: 12px;
+/* Media Queries */
+@media (max-width: 768px) {
+  .job {
+    height: 120px;
+    width: 120px;
+    font-size: 10px;
+    padding: 20px;
   }
 
-  .resumelink {
-      font-size: 12px;
-      margin-right: 4%;
+  .jobtext {
+    font-size: 10px;
   }
 
-  .header {
-      display: flex;
-      align-items: center;
-      margin-top: 5px;
+  .job.active {
+    margin: 10% auto; /* Adjust the margins for centering */
   }
-
-  #logo {
-      height: 100px;
-      width: 180px;
-    }
-} */
+}
 
 
 
