responsive css changes to show page

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -203,22 +203,22 @@
   }
 
   .job1.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
   .job2.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
   .job3.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
   .job4.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
   .job5.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
   .job6.active {
-    margin: 10% auto; /* Adjust the margins for centering */
+    margin: 10% auto; 
   }
 }
 
