--- a/src/Resume.css
+++ b/src/Resume.css
@@ -230,7 +230,7 @@
 
 
 
-/* 
+
 .job1:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
@@ -259,7 +259,7 @@
 .job6:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
-} */
+} 
   
   
   
