--- a/src/Resume.css
+++ b/src/Resume.css
@@ -145,8 +145,7 @@
   }
 
 
-/* Effects */
-
+/* Effects onlick*/
 
 .job1.active {
   transform: scale(1.4);
@@ -230,7 +229,7 @@
 
 
 
-
+/* Shadow on hover */
 .job1:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
@@ -262,4 +261,17 @@
 } 
   
   
-  
+/* Dark mode  */
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+
+.dark-mode .h2 {
+  font-size: 16px;
+}
+
+.dark-mode .grid-container {
+  gap: 30px;
+}
+
