--- a/src/Resume.css
+++ b/src/Resume.css
@@ -267,11 +267,11 @@
   color: white;
 }
 
-.dark-mode .h2 {
+/* .dark-mode .h2 {
   font-size: 16px;
 }
 
 .dark-mode .grid-container {
   gap: 30px;
-}
+} */
 
