styling dark mode change text color

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -121,26 +121,32 @@
 /* Text */
 
   .job1text {
+    color: black;
     word-wrap: break-word; 
   }
 
   .job2text {
+    color: black;
     word-wrap: break-word; 
   }
 
   .job3text {
+    color: black;
     word-wrap: break-word; 
   }
 
   .job4text {
+    color: black;
     word-wrap: break-word; 
   }
 
   .job5text {
+    color: black;
     word-wrap: break-word; 
   }
 
   .job6text {
+    color: black;
     word-wrap: break-word;
   }
 
