--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   font-size: 30px;
   height: 150px;
-  background-color: #F7F7F7;
+  background-color: #FAFAFA;
 }
 
 #logo {
@@ -18,7 +18,7 @@
 .footer {
   display: flex;
   justify-content: center;
-  background-color: #F7F7F7;
+  background-color: #FAFAFA;
   position: fixed;
   width: 100%;
   bottom: 0;
