add bottom margin to show page

--- a/src/Show.css
+++ b/src/Show.css
@@ -25,6 +25,7 @@ h1 {
     justify-content: center;
     gap: 50px;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* Card2 css name and logo picture */
