--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ a:hover {
   display: inline-block;
   white-space: nowrap;
   animation: marquee 30s linear infinite;
+  animation-delay: 1s;
 }
 
 @keyframes marquee {
