remove animation delay

--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,8 @@ a:hover {
 
 .ticker-text {
   display: inline-block;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   animation: marquee 30s linear infinite;
-  animation-delay: 1s;
 }
 
 @keyframes marquee {
