--- a/src/Resume.css
+++ b/src/Resume.css
@@ -266,9 +266,16 @@
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 } 
   
-  
+
+
+/* Style arrows on resume page */
 .arrowright {
   height: 100px;
   width: 100px;
+  
 }
 
+.arrowleft {
+  height: 100px;
+  width: 100px;
+}
