--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ a:hover {
 .ticker-container {
   width: 100%;
   overflow: hidden;
+  color: #fcefc9;;
 
 }
 
@@ -63,7 +64,6 @@ a:hover {
   display: inline-block;
   white-space: nowrap;
   animation: marquee 30s linear infinite;
-  background-color: #fcefc9;
 }
 
 @keyframes marquee {
