--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,5 +1,5 @@
 body {
-  background-image: "https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg";
+  background-image: url("https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg");
   background-size: cover;
 }
 
