--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,6 +1,12 @@
 body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.show-container {
+  position: relative;
+  z-index: 1;
 }
 
 .h2 {
