--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,4 +1,10 @@
-/* body {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -7,7 +13,8 @@
 .show-container {
   position: relative;
   z-index: 1;
-} */
+}
+
 
 .h2 {
     font-size: 14px;
