changes to ticker css

--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,8 +1,4 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+
 
 body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg");
@@ -10,10 +6,12 @@ body {
   background-repeat: no-repeat;
 }
 
-.show-container {
+/* .show-container {
   position: relative;
   z-index: 1;
-}
+} */
+
+
 
 
 .h2 {
