--- a/src/Resume.css
+++ b/src/Resume.css
@@ -4,12 +4,13 @@ body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/012/066/678/non_2x/a-background-with-pastel-neutral-color-with-simple-elegant-shape-ornament-vector.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  z-index: 0;
 }
 
-/* .show-container {
+.show-container {
   position: relative;
   z-index: 1;
-} */
+}
 
 
 
