--- a/src/Show.css
+++ b/src/Show.css
@@ -72,11 +72,32 @@ h1 {
 
 .avatar-image {
     position: relative;
-    height: 70%;
-    width: 70%;
+    height: 20%;
+    width: 20%;
 }
 
 
+.screenshot1 {
+    position: relative;
+    height: 20%;
+    width: 20%;
+}
+
+
+
+.screenshot2 {
+    position: relative;
+    height: 20%;
+    width: 20%;
+}
+
+
+
+.screenshot3 {
+    position: relative;
+    height: 20%;
+    width: 20%;
+}
 
 
 
