--- a/src/Show.css
+++ b/src/Show.css
@@ -71,6 +71,7 @@ h1 {
 }
 
 .avatar-image {
+    display: flex;
     position: relative;
     height: 20%;
     width: 20%;
@@ -78,6 +79,7 @@ h1 {
 
 
 .screenshot1 {
+    display: flex;
     position: relative;
     height: 20%;
     width: 20%;
@@ -86,6 +88,7 @@ h1 {
 
 
 .screenshot2 {
+    display: flex;
     position: relative;
     height: 20%;
     width: 20%;
@@ -94,6 +97,7 @@ h1 {
 
 
 .screenshot3 {
+    display: flex;
     position: relative;
     height: 20%;
     width: 20%;
