--- a/src/Show.css
+++ b/src/Show.css
@@ -73,6 +73,7 @@ h1 {
 .avatar-image {
     display: flex;
     position: relative;
+    flex-direction: column;
     height: 20%;
     width: 20%;
 }
@@ -80,6 +81,7 @@ h1 {
 
 .screenshot1 {
     display: flex;
+    flex-direction: row;
     position: relative;
     height: 20%;
     width: 20%;
@@ -89,6 +91,7 @@ h1 {
 
 .screenshot2 {
     display: flex;
+    flex-direction: column;
     position: relative;
     height: 20%;
     width: 20%;
@@ -98,6 +101,7 @@ h1 {
 
 .screenshot3 {
     display: flex;
+    flex-direction: row;
     position: relative;
     height: 20%;
     width: 20%;
