--- a/src/Show.css
+++ b/src/Show.css
@@ -60,12 +60,6 @@ h1 {
     margin-right: 2px;
 }
 
-.image-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
 /* Card2 css title and image used for project */
 .card2 {
 
@@ -73,35 +67,52 @@ h1 {
     margin: 0;
 }
 
-.avatar-image {
 
-    height: 20%;
-    width: 20%;
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+
+/* .avatar-image {
+
+    height: 35%;
+    width: 35%;
 }
 
 
 .screenshot1 {
 
-    height: 20%;
-    width: 20%;
+    height: 35%;
+    width: 35%;
 }
 
 
 
 .screenshot2 {
 
-    height: 20%;
-    width: 20%;
+    height: 35%;
+    width: 35%;
 }
 
 
 
 .screenshot3 {
 
-    height: 20%;
-    width: 20%;
-}
+    height: 35%;
+    width: 35%;
+} */
 
+
+.avatar-image,
+.screenshot1,
+.screenshot2,
+.screenshot3 {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+}
 
 
 
