--- a/src/Show.css
+++ b/src/Show.css
@@ -72,46 +72,16 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 8px;
   }
-
-
-/* .avatar-image {
-
-    height: 35%;
-    width: 35%;
-}
-
-
-.screenshot1 {
-
-    height: 35%;
-    width: 35%;
-}
-
-
-
-.screenshot2 {
-
-    height: 35%;
-    width: 35%;
-}
-
-
-
-.screenshot3 {
-
-    height: 35%;
-    width: 35%;
-} */
-
 
 .avatar-image,
 .screenshot1,
 .screenshot2,
 .screenshot3 {
-  width: 50%;
+  flex-basis: calc(50% - 10px);
   height: 50%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 
@@ -126,6 +96,12 @@ h1 {
     h3 {
         font-size: 14px;
     }
-
+    .avatar-image,
+    .screenshot1,
+    .screenshot2,
+    .screenshot3 {
+        width: 100%;
+        height: 50%;
+    }
 
   }
