--- a/src/Show.css
+++ b/src/Show.css
@@ -96,14 +96,20 @@ h1 {
     h3 {
         font-size: 14px;
     }
+
+    .image-container {
+        flex-wrap: nowrap;
+        flex-direction: column;
+        gap: 2px;
+      }
+
     .avatar-image,
     .screenshot1,
     .screenshot2,
     .screenshot3 {
-        width: 50%;
-        height: 50%;
-        gap: 1px;
-        display: flex;
-    }
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+      }
 
   }
