responsive ticker text

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ a:hover {
 @media (max-width: 768px) {
   .ticker-text {
     animation-duration: 40s;
-    white-space: initial;
+    /* white-space: initial; */
     overflow: auto;
     animation-timing-function: linear;
     padding-right: 100%; 
