--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,8 @@ a:hover {
   }
 }
 
-@media (max-width: 768px) {
+
+@media screen and (max-width: 768px) {
   .ticker-text {
     animation-duration: 15s;
     white-space: nowrap;
@@ -88,37 +89,3 @@ a:hover {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* React styling below */
-
-body {
-  margin-bottom: 100px;
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
