--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,7 @@ a:hover {
     animation-duration: 18s;
     white-space: nowrap;
     overflow: hidden;
+    width: auto;
     animation-timing-function: linear;
   }
 }
