--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,11 @@ a:hover {
     animation-duration: 18s;
     white-space: nowrap;
     overflow: hidden;
-    width: 200px;
+    font-size: 12px;
     animation-timing-function: linear;
+  }
+  .ticker-container {
+    width: 280px;
   }
 }
 
